--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -14,5 +14,5 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         registry: ghcr.io
-        username: ${{ secrets.GHCR_USERNAME }}
+        username: luizbafilho
         password: ${{ secrets.GHCR_TOKEN }}
