--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
-        registry: ghcr.io
-        username: luizbafilho
-        password: ${{ secrets.GHCR_TOKEN }}
+        with:
+          registry: ghcr.io
+          username: luizbafilho
+          password: ${{ secrets.GHCR_TOKEN }}
